# rdhcp

./: Cargo.toml  capture.pcapng  notes  rfc1533.html  rfc2131.html
src/: dhcp.rs  errors.rs  lib.rs  main.rs  messaging.rs  utils.rs
src/messaging/: options_decoding.rs  options_encoding.rs
