[package]
name = "rdhcp"
version = "0.1.0"
authors = ["Enn Michael <enntheprogrammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false